--- a/style.css
+++ b/style.css
@@ -23,10 +23,16 @@ header {
   position: sticky;
   top: 0;
   display: grid;
-  grid-template-columns: 1fr 50px;
+  grid-template-columns: 1fr;
   background-color: var(--primary);
   z-index: 99;
   border-bottom: 1px solid var(--dark-shade);
+}
+
+main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 #header-img {
@@ -36,44 +42,19 @@ header {
   padding: 20px;
 }
 
-#menu-icon {
-  display: none;
-}
-
-label {
-  cursor: pointer;
-  padding: 10px;
-  background-color: var(--dark-shade);
-  color: #fff;
-  font-size: 1.3rem;
-  position: absolute;
-  top: 0.9rem;
-  right: 0.8rem;
-  z-index: 2;
-}
-
-#menu-icon:checked + label + nav {
-  display: flex;
-}
-
 #nav-bar {
-  display: none;
-  background-color: var(--primary);
-  color: #fff;
+  top: 0;
+  position: sticky;
+  display: flex;
   padding: 10px 0;
   width: 100%;
-  border-bottom: 1px solid var(--dark-shade);
 
-  /* flex properties */
   justify-content: center;
   align-items: center;
-  gap: 30px;
+  gap: 15px;
   flex-direction: column;
-
-  position: absolute;
+  flex-wrap: wrap;
   width: 100%;
-  top: 70px;
-  z-index: 1;
 }
 
 #nav-bar a {
@@ -89,13 +70,9 @@ label {
   color: var(--complementary-1);
 }
 
-main {
-  width: 100%;
-}
-
 #hero {
-  width: 100vw;
-  height: 95vh;
+  width: 100%;
+  height: 80vh;
   position: relative;
   background: center / cover no-repeat
     url(https://cdn.pixabay.com/photo/2019/01/28/11/48/chess-3960184_1280.jpg);
@@ -172,16 +149,17 @@ main {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-main {
-  display: flex;
-  flex-direction: column;
+#features,
+#materials,
+#pricing,
+#newsletter {
+  scroll-margin-top: 215px;
 }
 
 #features {
   display: grid;
   gap: 2px;
   background-color: var(--primary);
-  scroll-margin-top: 250px;
 }
 
 .feature {
@@ -217,7 +195,6 @@ main {
 }
 #materials {
   background-color: #fff;
-  scroll-margin-top: 250px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -260,7 +237,6 @@ main {
   display: grid;
   padding: 2rem 1rem;
   font-size: 0.9rem;
-  scroll-margin-top: 250px;
 }
 
 #pricing-title {
@@ -306,6 +282,12 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: var(--primary);
+}
+
+#newsletter-banner {
+  width: 100%;
+  background-color: #fff;
 }
 
 #newsletter-caption {
@@ -316,11 +298,10 @@ main {
   padding: 20px;
   text-align: center;
   line-height: 1.3rem;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
 }
 
 #newsletter > div {
-  background-color: var(--primary);
   width: 100%;
   display: grid;
   gap: 20px;
@@ -403,19 +384,13 @@ footer {
   #materials,
   #pricing,
   #newsletter {
-    scroll-margin-top: 300px;
-  }
-
-  header {
-    grid-template-columns: minmax(200px, 1fr) 1fr;
-  }
-  label {
-    top: 1.2rem;
-    right: 1.5rem;
+    scroll-margin-top: 200px;
   }
 
   #nav-bar {
-    justify-content: flex-end;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 20px;
   }
 
   #nav-bar a {
@@ -475,7 +450,7 @@ footer {
 
   #newsletter-caption {
     padding: 3rem 20px;
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
   #newsletter > div {
@@ -501,29 +476,37 @@ footer {
 }
 
 @media only screen and (min-width: 1024px) {
+  #hero {
+    height: 100vh;
+  }
   #features,
   #materials,
   #pricing,
   #newsletter {
-    scroll-margin-top: 75px;
+    scroll-margin-top: 70px;
+  }
+
+  #features,
+  #materials,
+  #pricing {
+    padding: 4rem 10%;
   }
 
   header {
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 1.5fr;
+    column-gap: 3em;
+    padding: 0 10%;
   }
 
-  #menu-icon,
-  label {
-    display: none;
+  #hero-headline {
+    margin: 0 4em;
+    font-size: 2.5rem;
+    line-height: 4rem;
   }
 
-  #nav-bar {
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    top: auto;
-    padding-right: 1rem;
-    border-bottom: none;
+  #sub-headline {
+    width: auto;
+    font-size: 1.3rem;
   }
 
   #nav-bar a {
@@ -532,7 +515,6 @@ footer {
 
   #features {
     grid-template-columns: repeat(2, 1fr);
-    padding: 4rem;
     column-gap: 2rem;
   }
   .feature {
@@ -542,8 +524,6 @@ footer {
   #materials {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-
-    padding: 1rem;
   }
 
   .material {
@@ -552,5 +532,99 @@ footer {
 
   .material-title {
     font-size: 1.2rem;
+  }
+
+  #newsletter-caption {
+    width: 70%;
+    padding: 4rem 10%;
+    margin: 8% auto;
+    font-size: 1.5rem;
+  }
+
+  #newsletter > div:last-of-type {
+    width: 80%;
+    margin: 0 auto;
+    font-size: 2rem;
+  }
+  #chess-video {
+    width: 80%;
+    margin: 2rem auto;
+  }
+
+  #chess-video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  #hero-headline {
+    font-size: 3em;
+    padding-left: 2em;
+    padding-right: 2em;
+    line-height: 1.5em;
+  }
+
+  #sub-headline {
+    font-size: 2em;
+  }
+
+  .icon {
+    font-size: 4rem;
+  }
+
+  .feature-title {
+    font-size: 2.5rem;
+  }
+
+  .feature-desc {
+    font-size: 1.6rem;
+    line-height: 2rem;
+  }
+
+  #nav-bar a {
+    font-size: 1.8rem;
+  }
+
+  .material-title {
+    font-size: 2em;
+  }
+
+  #pricing-title {
+    font-size: 2.5rem;
+    padding-bottom: 2rem;
+  }
+  #pricing-table {
+    font-size: 2rem;
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  #newsletter-caption {
+    font-size: 2rem;
+  }
+
+  #newsletter-sub-caption {
+    font-size: 2.2rem;
+    width: 80%;
+    margin: 0 auto;
+  }
+  #email {
+    font-size: 2.5rem;
+    width: 70%;
+    margin: 2rem auto;
+  }
+
+  #submit {
+    font-size: 2.5rem;
+
+    margin: 0 auto;
+  }
+
+  #footer-text {
+    font-size: 1.2em;
   }
 }
